[tool.poetry]
name = "ethereum-quest"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.10.6"
pydantic-settings = "^2.8.1"
httpx = "^0.28.1"
openai = "^1.68.2"
fastapi = "^0.115.11"
uvicorn = { extras = ["standard"], version = "^0.34.0" }


[tool.poetry.group.dev.dependencies]
rich = "^13.9.4"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
